corrected alignment for h1 on about me

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -115,6 +115,10 @@ h2 {
 
 /* CONTACT PAGE */
 
+.info h1 {
+    text-align: center;
+}
+
 .company-info {
     text-align: center;
     margin-bottom: 2rem;
